--- a/index.qmd
+++ b/index.qmd
@@ -229,7 +229,7 @@ Allison presents
 
 ## If something is a problem, offer a solution
 
-1. Keep using `iris` and use it as an opportunity to learn/teach about it’s problematic aspects.
+1. Keep using `iris` and use it as an opportunity to learn/teach about its problematic aspects.
 
 2. Find a better dataset to replace `iris`. 
 
