--- a/index.qmd
+++ b/index.qmd
@@ -72,7 +72,8 @@ saveRDS(dl, file = "data/cran-downloads.RDS")
 :::
 
 ::: column
-```{r, fig.alt="Scatterplot showing linear relationships between penguin body mass and flipper length, both across and within species (Adelie, Chinstrap and Gentoo)."}
+```{r}
+#| fig.alt: "Scatterplot showing linear relationships between penguin body mass and flipper length, both across and within species (Adelie, Chinstrap and Gentoo)."
 # make the base plot
 penguin_linear_base <-
   penguins %>%
@@ -133,7 +134,8 @@ dl <- readRDS("data/cran-downloads.RDS")
 
 ::: columns
 ::: {.column width="80%"}
-```{r cran-trend, fig.alt="Line graph showing palmerpenguins package downloads from CRAN, which increases quickly since published in 2020 and has leveled off near 1000 downloads per day."}
+```{r cran-trend}
+#| fig.alt: "Line graph showing palmerpenguins package downloads from CRAN, which increases quickly since published in 2020 and has leveled off near 1000 downloads per day."
 #| fig.height: 4
 # from https://github.com/hadley/cran-downloads/blob/master/server.R
 show_trend <- function(df) {
@@ -245,7 +247,7 @@ Allison presents
 
 -   Alison writes a [blog post](https://www.apreshill.com/blog/2020-02-take-a-sad-script-make-it-better-tidymodels-edition/) with penguins after Allison shares it with her
 
-    [![Screenshot from Alison's first blog post using penguins from Allison](img/blog-post.png)](https://www.apreshill.com/blog/2020-02-take-a-sad-script-make-it-better-tidymodels-edition/)
+    [![Screenshot from Alison\'s first blog post using penguins from Allison](img/blog-post.png)](https://www.apreshill.com/blog/2020-02-take-a-sad-script-make-it-better-tidymodels-edition/)
 :::
 
 ::: {.column width="40%"}
@@ -271,7 +273,8 @@ Allison presents
 :::
 
 ::: column
-```{r, fig.alt="Scatterplots highlighting linear relationships between penguin body mass and flipper length (left) and iris petal length and petal width (right), both across and within the three species for each dataset."}
+```{r}
+#| fig.alt: "Scatterplots highlighting linear relationships between penguin body mass and flipper length (left) and iris petal length and petal width (right), both across and within the three species for each dataset."
 # Iris linear relationships (petal dimensions):
 iris_linear_base <- ggplot(iris, aes(x = Petal.Length, y = Petal.Width)) +
   scale_color_manual(values = c("gray70","gray40","black")) +
@@ -400,7 +403,7 @@ Alison HILL presents
 
 -   [Allison's art](https://allisonhorst.github.io/palmerpenguins/articles/art.html)
 
-    [![Allison Horst's illustration of the 3 penguin species](img/allison-penguins.png){width="800"}](https://allisonhorst.github.io/palmerpenguins/articles/art.html)
+    [![Allison Horst\'s illustration of the 3 penguin species](img/allison-penguins.png){width="800"}](https://allisonhorst.github.io/palmerpenguins/articles/art.html)
 
 ## Allison: Why has it been so popular?
 
@@ -408,7 +411,8 @@ Alison HILL presents
 ::: column
 The data itself---distributions, linearity
 
-```{r, fig.alt="Scatterplots of bill depth versus body mass for the three penguin species, showing a positive linear relationship within species that switches to a negative linear relationship if species is omitted, an example of Simpson’s paradox."}
+```{r}
+#| fig.alt: "Scatterplots of bill depth versus body mass for the three penguin species, showing a positive linear relationship within species that switches to a negative linear relationship if species is omitted, an example of Simpson’s paradox."
 # Simpson's Paradox example (body mass, omitting species):
 bmass_nospecies_base <- penguins %>%
   # doing this so ggiraph recognizes species across plots
@@ -485,7 +489,8 @@ girafe(code = print(bmass_nospecies_int + bmass_wspecies_int),
 ::: column
 Simpson's paradox examples in the wild!
 
-```{r, fig.alt="Scatterplot of bill length versus bill depth for the three penguin species, showing a positive linear relationship within species. If species is omitted as a variable, the relationship switches to a negative trend, another example of Simpson’s paradox in the data"}
+```{r} 
+#| fig.alt: "Scatterplot of bill length versus bill depth for the three penguin species, showing a positive linear relationship within species. If species is omitted as a variable, the relationship switches to a negative trend, another example of Simpson’s paradox in the data"
 # Simpson's Paradox example (bill dimensions, omitting species):
 simpson_nospecies_base <- penguins %>%
   # doing this so ggiraph recognizes species across plots
@@ -567,7 +572,8 @@ Good bones for multivariate analyses
 ::: column
 Principle Components Analysis
 
-```{r, fig.alt="Principal component biplot comparing results for penguins and iris, highlighting strong similarities between the two"}
+```{r}
+#| fig.alt: "Principal component biplot comparing results for penguins and iris, highlighting strong similarities between the two"
 ## ---- pca ---------------------------------------------------------
 # From Alison Hill's post for palmerpenguins pkgdown site
 
@@ -760,7 +766,8 @@ girafe(code = print(penguins_biplot_int | iris_biplot_int),
 ::: column
 K-means
 
-```{r, fig.alt="Compared k-means clustering scatterplots for penguins and iris."}
+```{r}
+#| fig.alt: "Compared k-means clustering scatterplots for penguins and iris."
 ## ---- kmeans ---------------------------------------------------------
 
 # TWO VARIABLE k-means comparison
